@@ -88,5 +88,6 @@ $CMAKE_BINARY -G "$MAKEFILES_TYPE" . \
       -DENABLE_DBUS=ON \
       -DENABLE_APPSTYLES=ON \
       -DENABLE_QWEBENGINE=OFF \
+      -DENABLE_FACESENGINE_DNN=ON \
       -Wno-dev \
       $SOURCEDIR && echo "$MESSAGE"
