@@ -79,6 +79,7 @@ cmake -G "$MAKEFILES_TYPE" . \
       -DENABLE_KIO=OFF \
       -DENABLE_APPSTYLES=OFF \
       -DENABLE_QWEBENGINE=OFF \
+      -DENABLE_FACESENGINE_DNN=ON \
       -DAPPLE_SUPPRESS_X11_WARNING=ON \
       -DCMAKE_COLOR_MAKEFILE=ON \
       -DCMAKE_BUILD_WITH_INSTALL_RPATH=ON \
