@@ -109,6 +109,7 @@ ${MXE_BUILD_TARGETS}-cmake -G "Unix Makefiles" . \
                            -DENABLE_KIO=OFF \
                            -DENABLE_APPSTYLES=OFF \
                            -DENABLE_QWEBENGINE=OFF \
+                           -DENABLE_FACESENGINE_DNN=ON \
                            -DENABLE_DRMINGW=ON \
                            ${PNG2ICO_PATH} \
                            ${OPTIONS} \
