@@ -24,19 +24,23 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR}/..
                     ${CMAKE_CURRENT_SOURCE_DIR}/recognition/opencv-lbph
                     ${CMAKE_CURRENT_SOURCE_DIR}/recognition/opencv-eigenfaces
                     ${CMAKE_CURRENT_SOURCE_DIR}/recognition/opencv-fisherfaces
-                    ${CMAKE_CURRENT_SOURCE_DIR}/recognition/dlib-dnn
                     ${CMAKE_CURRENT_SOURCE_DIR}/alignment/congealing
                     ${CMAKE_CURRENT_SOURCE_DIR}/preprocessing/shape-predictor
-                    ${CMAKE_CURRENT_SOURCE_DIR}/recognition/dlib-dnn/dnnface/dnn_base
-                    ${CMAKE_CURRENT_SOURCE_DIR}/recognition/dlib-dnn/dnnface/image_processing
-                    ${CMAKE_CURRENT_SOURCE_DIR}/recognition/dlib-dnn/dnnface/image_transforms
-                    ${CMAKE_CURRENT_SOURCE_DIR}/recognition/dlib-dnn/dnnface/matrix
-                    ${CMAKE_CURRENT_SOURCE_DIR}/recognition/dlib-dnn/dnnface/nn
-                    ${CMAKE_CURRENT_SOURCE_DIR}/recognition/dlib-dnn/dnnface
 
 #                   ${CMAKE_CURRENT_SOURCE_DIR}/alignment/flandmark
 #                   ${CMAKE_CURRENT_SOURCE_DIR}/preprocessing/tantriggs
 )
+
+if(ENABLE_FACESENGINE_DNN)
+    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/recognition/dlib-dnn/dnnface/dnn_base
+                        ${CMAKE_CURRENT_SOURCE_DIR}/recognition/dlib-dnn/dnnface/image_processing
+                        ${CMAKE_CURRENT_SOURCE_DIR}/recognition/dlib-dnn/dnnface/image_transforms
+                        ${CMAKE_CURRENT_SOURCE_DIR}/recognition/dlib-dnn/dnnface/matrix
+                        ${CMAKE_CURRENT_SOURCE_DIR}/recognition/dlib-dnn/dnnface/nn
+                        ${CMAKE_CURRENT_SOURCE_DIR}/recognition/dlib-dnn/dnnface
+                        ${CMAKE_CURRENT_SOURCE_DIR}/recognition/dlib-dnn
+    )
+endif()
 
 set(facesengine_LIB_SRCS detection/opencvfacedetector.cpp
                          preprocessing/shape-predictor/fullobjectdetection.cpp
@@ -68,10 +72,6 @@ set(facesengine_database_LIB_SRCS recognitiondatabase.cpp
                                   recognition/opencv-fisherfaces/opencvfisherfacerecognizer.cpp
                                   recognition/opencv-fisherfaces/facerec_fisherborrowed.cpp
 
-                                  # Neural NetWork Faces recognition module based on Dlib
-                                  recognition/dlib-dnn/dnnfacemodel.cpp
-                                  recognition/dlib-dnn/opencvdnnfacerecognizer.cpp
-                                  recognition/dlib-dnn/facerec_dnnborrowed.cpp
 
                                   # Lpbh Faces recognition module based on OpenCV
                                   recognition/opencv-lbph/lbphfacemodel.cpp
@@ -87,6 +87,15 @@ set(facesengine_database_LIB_SRCS recognitiondatabase.cpp
                                   facedb/facedbschemaupdater.cpp
                                   facedb/facedb.cpp
 )
+
+if(ENABLE_FACESENGINE_DNN)
+    set(facesengine_database_LIB_SRCS ${facesengine_database_LIB_SRCS}
+                                      # Neural NetWork Faces recognition module based on Dlib
+                                      recognition/dlib-dnn/dnnfacemodel.cpp
+                                      recognition/dlib-dnn/opencvdnnfacerecognizer.cpp
+                                      recognition/dlib-dnn/facerec_dnnborrowed.cpp
+    )
+endif()
 
 add_library(digikamfacesengine_src
             OBJECT
